tests/pass/parse/integers/u16/min.leo
function main() {
    let a: u16 = 0;
}