tests/fail/parse/syntax/semicolon.leo
function main() {
    let a = 0
}